[package]
name = "goxoy_sui_chain"
version = "0.1.0"
edition = "2021"
authors = ["Omer GOKSOY <goksoy.omer@gmail.com>"]
license = "MIT"
repository = "https://github.com/goxoy/goxoy_sui_chain"
keywords = ["sui-network-library","sui-chain-library"]
description = "Sui Network SDK Library"

[dependencies]
sui_sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk", branch="main"}
sui_json_rpc_types = { git = "https://github.com/mystenlabs/sui", package = "sui-json-rpc-types", branch="main"}
sui_types = { git = "https://github.com/mystenlabs/sui", package = "sui-types", branch="main"}
sui_config = { git = "https://github.com/mystenlabs/sui", package = "sui-config", branch="main"}
sui_keys = { git = "https://github.com/mystenlabs/sui", package = "sui-keys", branch="main"}
shared_crypto = { git = "https://github.com/mystenlabs/sui", package = "shared-crypto", branch="main"}
#fastcrypto = { git = "https://github.com/mystenlabs/sui", package = "fastcrypto", branch="main", rev="6ea6bc9"}
fastcrypto = "0.1.8"
bcs = "0.1.6"
anyhow = "1.0"
serde = "1.0.210"
rand = "0.8.5"
base58 = "0.2.0"
base64 = "0.22.1"
serde_json = "1.0.132"
